WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
188415
Yarr JIT should include annotations with dumpDisassembly=true
https://bugs.webkit.org/show_bug.cgi?id=188415
Summary
Yarr JIT should include annotations with dumpDisassembly=true
Michael Saboff
Reported
2018-08-08 13:46:03 PDT
All of the other JSC related JITs intermingle the byte code / IR in the disassembler output. The Yarr regular expression JIT should also annotate its output with the compiled pattern info.
Attachments
Patch
(36.79 KB, patch)
2018-08-08 14:16 PDT
,
Michael Saboff
ysuzuki
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Michael Saboff
Comment 1
2018-08-08 14:15:46 PDT
<
rdar://problem/43063283
>
Michael Saboff
Comment 2
2018-08-08 14:16:16 PDT
Created
attachment 346794
[details]
Patch
EWS Watchlist
Comment 3
2018-08-08 14:18:43 PDT
Attachment 346794
[details]
did not pass style-queue: ERROR: Source/JavaScriptCore/yarr/YarrDisassembler.h:96: The parameter name "vectorOrder" adds no information, so it should be removed. [readability/parameter_name] [5] ERROR: Source/JavaScriptCore/yarr/YarrDisassembler.h:98: The parameter name "vectorOrder" adds no information, so it should be removed. [readability/parameter_name] [5] Total errors found: 2 in 10 files If any of these errors are false positives, please file a bug against check-webkit-style.
Yusuke Suzuki
Comment 4
2018-08-08 15:07:03 PDT
Comment on
attachment 346794
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=346794&action=review
r=me
> Source/JavaScriptCore/yarr/YarrDisassembler.h:77 > + enum VectorOrder {
enum class?
> Source/JavaScriptCore/yarr/YarrDisassembler.h:109 > + unsigned m_indentLevel;
Making `m_identLevel { 0 };` looks nice to me instead of initializing it in a constructor.
> Source/JavaScriptCore/yarr/YarrJIT.cpp:45 > +// friend void jitCompile(VM*, YarrCodeBlock&, const String& pattern, unsigned& numSubpatterns, const char*& error, bool ignoreCase, bool multiline);
Let's remove this.
Michael Saboff
Comment 5
2018-08-08 15:35:01 PDT
(In reply to Yusuke Suzuki from
comment #4
)
> Comment on
attachment 346794
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=346794&action=review
> > r=me > > > Source/JavaScriptCore/yarr/YarrDisassembler.h:77 > > + enum VectorOrder { > > enum class?
Done.
> > Source/JavaScriptCore/yarr/YarrDisassembler.h:109 > > + unsigned m_indentLevel; > > Making `m_identLevel { 0 };` looks nice to me instead of initializing it in > a constructor.
Done.
> > Source/JavaScriptCore/yarr/YarrJIT.cpp:45 > > +// friend void jitCompile(VM*, YarrCodeBlock&, const String& pattern, unsigned& numSubpatterns, const char*& error, bool ignoreCase, bool multiline); > > Let's remove this.
Removed. This was a holdover when I was checking if this was dead.
Michael Saboff
Comment 6
2018-08-08 15:42:32 PDT
Committed
r234713
: <
https://trac.webkit.org/changeset/234713
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug